Wordle UI improvements

--- a/wordle/templates/wordle/base.html
+++ b/wordle/templates/wordle/base.html
@@ -1,11 +1,20 @@
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> 
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Roboto+Serif:wght@100;500&display=swap" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 {% load static %} 
 <link rel="stylesheet" href="{% static 'wordle/custom.css' %}">
 <title>Wordle solver</title>
 <head>
 <script type="text/javascript">
+
+    $(document).ready(function() {
+        $('#wordle_form').submit(function() {
+           $('#suggestions').html("Checking...")
+           //document.getElementById('suggestions').value = "Checking.."
+           document.getElementById('spinner').style.display = '' 
+        });
+    });
 
     function on_load()
     {
@@ -28,15 +37,18 @@
                         if ((code >= 65 && code <= 90) ||
                             (code >= 97 && code <= 122)) {
                                 // Valid character
+                                rgb = get_rgb(e.target)
+                                if (rgb == '#add8e6') {
+                                    // empty color, toggle it 
+                                    change_color(e.target)
+                                }
                                 next_cell = get_next_cell_in_row(e.target);
+                                if (next_cell != e.target) {
+                                    next_cell.value = " "
+                                }
                                 next_cell.focus();
                         } else {
                             e.target.value = ""
-                            if (cell_value == " ") {
-                                // Space key, use it to change color
-                                cell_clicked(e.target);
-                            }
-
                         }
                     } else {
                         // Cell value is empty 
@@ -96,12 +108,8 @@
         return;
     }
 
-    function cell_clicked(el)
+    function get_rgb(el)
     {
-        if (el.readOnly) {
-            return
-        }
-
         // Get current background color and cycle to next
         if (window.getComputedStyle) {
             style = window.getComputedStyle(el);
@@ -112,6 +120,16 @@
         // Get background color and convert to #RRGGBB hex
         rgb = style.backgroundColor;
         rgb  = `#${rgb.match(/^rgb\((\d+),\s*(\d+),\s*(\d+)\)$/).slice(1).map(n => parseInt(n, 10).toString(16).padStart(2, '0')).join('')}`
+        return rgb
+    }
+
+    function change_color(el)
+    {
+        if (el.readOnly) {
+            return
+        }
+
+        rgb = get_rgb(el)
 
         var new_state = "C"
 
@@ -121,7 +139,7 @@
         } else if (rgb == '#00aa00') {   //green => orange
             rgb = '#ffa500'
             new_state = "W"
-        } else if (rgb == '#ffa500') {  // orange => grey
+        } else if (rgb == '#ffa500' || rgb == '#add8e6') {  // empty/orange => grey
             rgb = '#aaaaaa'
             new_state = "N"
         }
@@ -129,15 +147,24 @@
         el.style.backgroundColor = rgb;
         document.getElementById(el.id+"_hidden").value = new_state
     }
+
+    function color_btn_clicked(row, col) {
+        cell = document.getElementById("c" + row.toString() + col.toString())
+        change_color(cell)
+        //alert("Color btn clicked " + row.toString() + col.toString())
+    }
 </script>
 </head>
 <nav class="navbar navbar-dark bg-primary">
-    <div class="container-fluid">
+    <!-- <div class="container-fluid"> -->
       <a class="navbar-brand" href="#">
         <img type='img/jpg' src="{% static 'wordle/header.jpeg' %}" alt="" width="30" height="24" class="d-inline-block align-text-top">
         Wordle Solver
       </a>
-    </div>
+    <!-- </div> -->
+    <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
+    <button class="btn btn-success" onclick="location.href='{% url 'wordle:home' %}';">Start again</button>
+    <!-- </div> -->
   </nav>
 <body onload='on_load();'>
 
@@ -147,29 +174,39 @@
 </div>
 
 <div class="center">
-  <form action="{% url 'wordle:solve_next' %}" title="A-Z only">
+  <form id="wordle_form" action="{% url 'wordle:solve_next' %}" title="A-Z only">
 
         {% for row_obj in rows %}
             {% for cell_obj in row_obj.cells %}
-                <input class="cell" style="background-color:{{cell_obj.bg_color}}; color:#FFFFFF; text-transform:uppercase; font-size:50px" name="{{cell_obj.name}}" id="{{cell_obj.name}}" value="{{cell_obj.value}}" {{base_cell_attrs|safe}} {{cell_obj.read_only}} {{cell_obj.required}}>
+                <input class="cell" type="{{cell_obj.type}}" style="background-color:{{cell_obj.bg_color}}; color:'#ffffff'; text-transform:uppercase; font-size:50px" name="{{cell_obj.name}}" id="{{cell_obj.name}}" value="{{cell_obj.value}}" {{base_cell_attrs|safe}} {{cell_obj.read_only}} {{cell_obj.required}}>
                 <input type="hidden" value="{{cell_obj.hidden_value}}" id="{{cell_obj.name}}_hidden" name="{{cell_obj.name}}_hidden">
             {% endfor %}
         <br>
         {% endfor %}
-
+        <button type="button" class="color_button" onclick="color_btn_clicked({{active_row}}, 0)">Color</button>
+        <button type="button" class="color_button" onclick="color_btn_clicked({{active_row}}, 1)">Color</button>
+        <button type="button" class="color_button" onclick="color_btn_clicked({{active_row}}, 2)">Color</button>
+        <button type="button" class="color_button" onclick="color_btn_clicked({{active_row}}, 3)">Color</button>
+        <button type="button" class="color_button" onclick="color_btn_clicked({{active_row}}, 4)">Color</button>
         <br>
-        <input type="submit" class="btn btn-primary" value="Submit">
-        <input type="button" class="btn btn-success" onclick="location.href='{% url 'wordle:home' %}';" value="Start again"> 
+        <input style="margin-top:30px" type="submit" class="btn btn-primary" value="Submit">
+        <!-- <input type="button" class="btn btn-success" onclick="location.href='{% url 'wordle:home' %}';" value="Start again">  -->
         <!-- <a class="btn btn-primary" href="{% url 'wordle:home' %}" role="button">New</a> -->
         <!-- <a href="{% url 'wordle:home' %}" class="btn btn-success" role="button" style="padding: 10px">Start again</a> -->
   </form>
 </div>
-<div class="p-2 mb-3 bg-success text-white bg-opacity-75" style="font-family: 'EB Garamond', serif; font-size:20px">{{suggestions}}</div>
+
 <!--
-<nav class="navbar navbar-light" style="background-color: #e3f2fd; font-family: 'EB Garamond', serif; font-size:30px">
-    {{suggestions}}
-</nav> 
+<div class="p-2 mb-3 bg-success text-white bg-opacity-75" style="font-family: 'EB Garamond', serif; font-size:20px">{{suggestions}}</div>
 -->
+<!-- <div class="p-2 mb-3 bg-success" style="font-family: 'EB Garamond', serif; font-size:20px"> -->
+<div class="form-floating" style="margin-left:10px; margin-right:10px; border-style:dashed; border-color:rgb(129, 236, 240); font-family:'EB Garamond', serif; font-size:20px">
+    <strong id="suggestions">{{suggestions}}</strong>&nbsp;&nbsp;
+    <div id="spinner" class="spinner-border ml-auto" role="status" aria-hidden="true" style="display:none"></div>
+</div>
+<!-- &nbsp;
+<button style="margin-top:20px" class="btn btn-success" onclick="location.href='{% url 'wordle:home' %}';">Start again</button> -->
+  
 </body>
 
 
