--- a/wordle/static/wordle/custom.css
+++ b/wordle/static/wordle/custom.css
@@ -1,23 +1,21 @@
-/*.center {
+.color_button {
+    background: linear-gradient(green, orange, grey);
+        /* background: linear-gradient(black, transparent); */
+    /* background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #000000), color-stop(100%, #ffffff)); */
+    /* margin-top: 0px; */
     margin: auto;
-    display: inline-block;
-    width: 60%; 
-    border: 1px solid #0d0d0ec7; 
-    padding: 10px;
-  } 
+    width: 16%;
+    text-align: center;
+}
 
-.center  {
-     width: 300px;
-     margin: 0 auto;
- } */
-
- .cell {
+.cell {
     text-align: center;
     margin: auto;
     width: 16%;
     /* padding: 5px; */
 }
-.center {
+
+ .center {
     margin: auto;
     width: 50%;
     /* border: 3px solid green; */
