--- a/wordle/templates/wordle/base.html
+++ b/wordle/templates/wordle/base.html
@@ -170,7 +170,7 @@
 
 <!-- Suggestions label -->
 <div class="form-floating mb-3">
-    <input class="form-control" type="text" placeholder="Click on the cell (or press <Space>) to specify letter's presence" aria-label="Disabled input example" disabled>
+    <input class="form-control" type="text" placeholder="Enter the word and set colors returned by wordle" aria-label="Disabled input example" disabled>
 </div>
 
 <div class="center">
